<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_visibility_black_48dp"
            android:title="@string/science"/>
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_dashboard_black_48dp"
            android:title="@string/beauty"/>
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_translate_black_48dp"
            android:title="@string/translate"/>

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_class_black_48dp"
            android:title="@string/one"/>
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_face_black_24dp"
            android:title="@string/qingyunke"/>


        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_info_black_48dp"
            android:title="@string/about"/>
    </group>


</menu>
